crates/swc/tests/tsc-references/propertyAndFunctionWithSameName.1.normal.js
//// [propertyAndFunctionWithSameName.ts]
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
var C = /*#__PURE__*/ function() {
    "use strict";
    function C() {
        _class_call_check(this, C);
    }
    var _proto = C.prototype;
    _proto.x = function x() {
        return 1;
    };
    return C;
}();
var D = /*#__PURE__*/ function() {
    "use strict";
    function D() {
        _class_call_check(this, D);
    }
    var _proto = D.prototype;
    _proto.x = function x(v) {} // error
    ;
    return D;
}();
